--- a/index.html
+++ b/index.html
@@ -10,9 +10,38 @@
 </head>
 
 <body>
+  <!-- <div class="quiz-over-modal">
+    <div class="content">
+      <h1>Хороший Результат!</h1>
+      <p> Ти відповів на
+        <span id="correct-answear"></span>з
+        <span id="number-of-all-questions-2"></span>питань
+      </p>
 
-
-
+      <button id="btn-try-again">Спробуй знову</button>
+    </div>
+  </div> -->
+  <div class="quiz-container">
+    <div class="question-number">
+      <h3>Питання
+        <span id="number-of-question"></span>
+        з
+        <span id="number-of-all-question"></span>
+      </h3>
+    </div>
+    <div class="question"></div>
+    <div class="options">
+      <div id="0" class="option option1"></div>
+      <div id="1" class="option option2"></div>
+      <div id="2" class="option option3"></div>
+      <div id="3" class="option option4"></div>
+    </div>
+    <div class="button">
+      <button class="button" id="btn-next">Next</button>
+    </div>
+    <div class="answear-indicator" id="answear-tracker">
+    </div>
+  </div>
   <script src="scrypt.js"></script>
 </body>
 
