--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <!-- <div class="quiz-over-modal">
+  <div class="quiz-over-modal">
     <div class="content">
       <h1>Хороший Результат!</h1>
       <p> Ти відповів на
@@ -18,9 +18,9 @@
         <span id="number-of-all-questions-2"></span>питань
       </p>
 
-      <button id="btn-try-again">Спробуй знову</button>
+      <button class="button" id="btn-try-again">Спробуй знову</button>
     </div>
-  </div> -->
+  </div>
   <div class="quiz-container">
     <div class="question-number">
       <h3>Питання
@@ -29,14 +29,14 @@
         <span id="number-of-all-question"></span>
       </h3>
     </div>
-    <div class="question"></div>
+    <div id="question"></div>
     <div class="options">
-      <div id="0" class="option option1"></div>
-      <div id="1" class="option option2"></div>
-      <div id="2" class="option option3"></div>
-      <div id="3" class="option option4"></div>
+      <div data-id="0" class="option option1"></div>
+      <div data-id="1" class="option option2"></div>
+      <div data-id="2" class="option option3"></div>
+      <div data-id="3" class="option option4"></div>
     </div>
-    <div class="button">
+    <div>
       <button class="button" id="btn-next">Next</button>
     </div>
     <div class="answear-indicator" id="answear-tracker">
